--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -750,4 +750,10 @@
     <string name="site_description_dutch_comics_shopping">Nederlands en meer; Strips; Winkelen</string>
     <string name="lbl_author_type_storyboard">Storyboard</string>
     <string name="lbl_author_type_lettering">Lettering</string>
+    <string name="lbl_percentage">Percentage</string>
+    <string name="lbl_percentage_read">% gelezen</string>
+    <string name="lbl_current_page">Huidige pagina</string>
+    <string name="btn_finished">Voltooid</string>
+    <string name="ps_use_read_progress_off">Gebruik een eenvoudige status Lezen/Niet gelezen.</string>
+    <string name="ps_use_read_progress_on">Volg de voortgang in percentage of paginanummer.</string>
 </resources>
