--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“ - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -766,4 +769,10 @@
     <string name="site_description_dutch_comics_shopping">Nizozemština a další; Komiks; Nakupování</string>
     <string name="lbl_author_type_storyboard">Scénáře</string>
     <string name="lbl_author_type_lettering">Písmo</string>
+    <string name="lbl_percentage">Procento</string>
+    <string name="lbl_percentage_read">% přečteno</string>
+    <string name="lbl_current_page">Aktuální stránka</string>
+    <string name="btn_finished">Dokončeno</string>
+    <string name="ps_use_read_progress_off">Použijte jednoduchý stav přečteno/nepřečteno.</string>
+    <string name="ps_use_read_progress_on">Sledujte pokrok v procentech nebo v počtu stránek.</string>
 </resources>
