--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes „…“  - Regex to find wrong ones: ('|”|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -747,4 +750,10 @@
     <string name="site_description_dutch_comics_shopping">Niederländisch und mehr; Comics; Einkaufen</string>
     <string name="lbl_author_type_storyboard">Drehbuch</string>
     <string name="lbl_author_type_lettering">Beschriftung</string>
+    <string name="lbl_percentage">Prozentsatz</string>
+    <string name="lbl_percentage_read">% gelesen</string>
+    <string name="lbl_current_page">Aktuelle Seite</string>
+    <string name="btn_finished">Beendet</string>
+    <string name="ps_use_read_progress_off">Verwenden Sie einen einfachen Gelesen/Ungelesen-Status.</string>
+    <string name="ps_use_read_progress_on">Verfolgen Sie den Fortschritt in Prozent oder Seitenzahl.</string>
 </resources>
