--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -767,4 +770,9 @@
     <string name="site_description_dutch_comics_shopping">Голландский и не только; комиксы; Покупки</string>
     <string name="lbl_author_type_storyboard">Раскадровка</string>
     <string name="lbl_author_type_lettering">Надпись</string>
+    <string name="lbl_percentage">Процент</string>
+    <string name="lbl_current_page">Текущая страница</string>
+    <string name="btn_finished">Завершено</string>
+    <string name="ps_use_read_progress_off">Используйте простой статус \"Прочитано/Не прочитано\".</string>
+    <string name="ps_use_read_progress_on">Отслеживайте прогресс в процентах или по номеру страницы.</string>
 </resources>
