--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes “…”  - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources>
@@ -757,4 +760,9 @@
     <string name="site_description_dutch_comics_shopping">Hollandaca ve daha fazlası; Çizgi Romanları; Alışveriş</string>
     <string name="lbl_author_type_storyboard">Film şeridi</string>
     <string name="lbl_author_type_lettering">Yazıları</string>
+    <string name="lbl_percentage">Yüzde</string>
+    <string name="lbl_current_page">Geçerli sayfa</string>
+    <string name="btn_finished">Tamamlandı</string>
+    <string name="ps_use_read_progress_off">Basit bir Okundu/Okunmadı durumu kullanın.</string>
+    <string name="ps_use_read_progress_on">İlerlemeyi yüzde veya sayfa sayısı olarak takip edin.</string>
 </resources>
