--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1680,11 +1680,13 @@
     <!-- Field label; reading-progress: Current page. -->
     <string name="lbl_current_page">Current page</string>
     <!-- Field label; reading-progress: Total number of pages. -->
-    <string name="lbl_total_pages">Total pages</string>
+    <string name="lbl_total_pages">Total</string>
+    <!-- Field label / Dialog title. Short for "Track progress" -->
+    <string name="lbl_track_progress">Progress</string>
     <!-- Field label / Dialog title. -->
-    <string name="lbl_reading_progress">Reading progress</string>
+    <string name="lbl_track_progress_long">Track progress</string>
     <!-- Button label: the user finished reading a book. -->
-    <string name="btn_finished">Finished</string>
+    <string name="btn_finished">Completed</string>
 
     <!-- Reading progress: param1: percentage 0..100 displayed with a percentage sign "%%". -->
     <string name="info_progress_x_percent">Reading\nProgress: %1$d%%</string>
@@ -1692,9 +1694,9 @@
     <string name="info_progress_page_x_of_y">Reading\nPage: %1$d of %2$d</string>
 
     <!-- SwitchPreference : Read Progress: use the traditional Read/Unread checkbox style. -->
-    <string name="ps_use_read_progress_off">Use a simple Read/Unread status</string>
+    <string name="ps_use_read_progress_off">Use a simple Read/Unread status.</string>
     <!-- SwitchPreference : Read Progress: use the extended progress options. -->
-    <string name="ps_use_read_progress_on">Track progress in percentage or page number</string>
+    <string name="ps_use_read_progress_on">Track progress in percentage or page number.</string>
 
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your owned comics from the StripInfo.be website? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 
