--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
@@ -768,10 +771,8 @@
     <string name="ps_use_read_progress_on">Siga el progreso en porcentaje o número de página.</string>
     <string name="lbl_percentage_read">% leído</string>
     <string name="lbl_track_progress">Progreso</string>
-    <string name="info_progress_x_percent">Leyendo
-\nProgreso: %1$d %%</string>
-    <string name="info_progress_page_x_of_y">Leyendo
-\nPágina: %1$d de %2$d</string>
+    <string name="info_progress_x_percent">Leyendo\nProgreso: %1$d %%</string>
+    <string name="info_progress_page_x_of_y">Leyendo\nPágina: %1$d de %2$d</string>
     <string name="lbl_total_pages">Total</string>
     <string name="lbl_track_progress_long">Seguimiento del progreso</string>
 </resources>
