--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -759,4 +759,10 @@
     <string name="btn_finished">Completato</string>
     <string name="ps_use_read_progress_off">Utilizzare un semplice stato di lettura/non lettura.</string>
     <string name="ps_use_read_progress_on">Traccia l\'avanzamento in percentuale o in numero di pagina.</string>
+    <string name="info_progress_x_percent">In lettura\nProgressi: %1$d%%</string>
+    <string name="info_progress_page_x_of_y">In lettura\nPagina: %1$d di %2$d</string>
+    <string name="lbl_track_progress_long">Traccia i tuoi progressi</string>
+    <string name="lbl_total_pages">Totale</string>
+    <string name="lbl_percentage_read">% lettura</string>
+    <string name="lbl_track_progress">Progressi</string>
 </resources>
