--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -775,4 +775,10 @@
     <string name="btn_finished">Завершено</string>
     <string name="ps_use_read_progress_off">Используйте простой статус \"Прочитано/Не прочитано\".</string>
     <string name="ps_use_read_progress_on">Отслеживайте прогресс в процентах или по номеру страницы.</string>
+    <string name="info_progress_x_percent">Читаю\nПрогресс: %1$d%%</string>
+    <string name="info_progress_page_x_of_y">Читаю\nСтраница: %1$d из %2$d</string>
+    <string name="lbl_track_progress_long">Отслеживайте свой прогресс</string>
+    <string name="lbl_total_pages">Всего</string>
+    <string name="lbl_percentage_read">% читать</string>
+    <string name="lbl_track_progress">Прогресс</string>
 </resources>
