--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2024 HardBackNutter
   ~ @License GNU General Public License
@@ -17,7 +18,9 @@
   ~
   ~ You should have received a copy of the GNU General Public License
   ~ along with NeverTooManyBooks. If not, see <http://www.gnu.org/licenses/>.
-  --><!DOCTYPE resources [
+  -->
+
+<!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
 <!-- Quotes “...”  (older «…» are no longer used as verified with a native speaker) - Regex to find wrong ones: ('|„|‘|’|«|») --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools" tools:locale="pt">
@@ -781,7 +784,7 @@
     <string name="btn_finished">Concluído</string>
     <string name="ps_use_read_progress_off">Utilize um simples estado Lido/Não lido.</string>
     <string name="ps_use_read_progress_on">Acompanhe o progresso em percentagem ou número de página.</string>
-    <string name="info_progress_x_percent">A ler\nProgresso: %1$d%%</string>
+    <string name="info_progress_x_percent">%1$d%% ler</string>
     <string name="info_progress_page_x_of_y">A ler\nPágina: %1$d de %2$d</string>
     <string name="lbl_track_progress_long">Acompanhe o seu progresso</string>
     <string name="lbl_total_pages">Total</string>
