--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,7 +23,7 @@
 <!DOCTYPE resources [
 <!ENTITY APP_NAME "NeverTooManyBooks">
 ]>
-<!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’)
+<!-- Quotes « … »  - Regex to find wrong ones: ('|„|“|”|‘|’)
 --><!--suppress LongLine --><resources xmlns:tools="http://schemas.android.com/tools">
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d livre</item>
@@ -758,10 +758,10 @@
     <string name="lbl_percentage">Pourcentage</string>
     <string name="lbl_current_page">Page actuelle</string>
     <string name="btn_finished">Terminé</string>
-    <string name="ps_use_read_progress_off">Utilisez un simple statut \"lu/non lu\".</string>
+    <string name="ps_use_read_progress_off">Utilisez un simple statut « lu/non lu ».</string>
     <string name="ps_use_read_progress_on">Suivez la progression en pourcentage ou en nombre de pages.</string>
-    <string name="info_progress_x_percent">%1$d%% lu</string>
-    <string name="info_progress_page_x_of_y">En cours\nPage : %1$d de %2$d</string>
+    <string name="info_progress_x_percent">%1$d %% lu</string>
+    <string name="info_progress_page_x_of_y">En cours\nPage : %1$d de %2$d</string>
     <string name="lbl_track_progress_long">Suivez vos progrès</string>
     <string name="lbl_total_pages">Total</string>
     <string name="lbl_percentage_read">% lu</string>
