--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -761,4 +761,5 @@
     <string name="lbl_track_progress_long">Verfolgen Sie Ihren Fortschritt</string>
     <string name="lbl_total_pages">Gesamt</string>
     <string name="lbl_track_progress">Fortschritt</string>
+    <string name="error_total_pages_must_be_larger_than_current_page">Muss größer oder gleich der aktuellen Seite sein</string>
 </resources>
