--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -765,4 +765,5 @@
     <string name="lbl_total_pages">Totale</string>
     <string name="lbl_percentage_read">% lettura</string>
     <string name="lbl_track_progress">Progressi</string>
+    <string name="error_total_pages_must_be_larger_than_current_page">Deve essere maggiore o uguale alla pagina corrente</string>
 </resources>
