--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -784,4 +784,5 @@
     <string name="lbl_total_pages">Łącznie</string>
     <string name="lbl_percentage_read">% czytaj</string>
     <string name="lbl_track_progress">Postęp</string>
+    <string name="error_total_pages_must_be_larger_than_current_page">Musi być większa lub równa bieżącej stronie</string>
 </resources>
