--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -791,4 +791,5 @@
     <string name="lbl_percentage_read">% ler</string>
     <string name="lbl_track_progress">Progresso</string>
     <string name="lbl_author_type_lettering">Letrista</string>
+    <string name="error_total_pages_must_be_larger_than_current_page">Deve ser maior ou igual à página atual</string>
 </resources>
