--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -781,4 +781,5 @@
     <string name="lbl_total_pages">Всего</string>
     <string name="lbl_percentage_read">% читать</string>
     <string name="lbl_track_progress">Прогресс</string>
+    <string name="error_total_pages_must_be_larger_than_current_page">Должна быть больше или равна текущей странице</string>
 </resources>
